# pyreason-rewrite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: campaign-worker.md
.claude/commands/: campaign.md
docs/: surface.md
docs/adr/: 0001-rewrite-package-layout.md  0002-reference-core-state-step-trace.md  0003-fp-schedule-one-semantics-core.md  0004-execution-layer-pure-python-core.md
docs/divergences/: DIV-0001.md  DIV-0002.md  DIV-0003.md
docs/hivemind-copy/: README.md  agent-playbook.md  ai-coding-pitfalls.md  charter.md  cross-repo-links.md  security-model.md
harness/: __init__.py  bench.py  capture.py  compare.py  profile.py  reference_fns.py  run.py
hivemind-copy/: agent-playbook.md  ai-coding-pitfalls.md  charter.md  cross-repo-links.md  security-model.md
oracle/: PIN
scripts/: bench-ladder  rewrite-python
tests/: test_bench_runner.py  test_capture_validation.py  test_compare_layer.py  test_div_0001_reproducer.py  test_div_0002_reproducer.py  test_div_0003_reproducer.py  test_env_pins.py  test_gen_pokec_fixtures.py  test_harness_runner.py  test_oracle_vs_oracle_e2e.py  test_preflight_e2e.py  test_preflight_seam.py  test_profile_driver.py  test_resume_e2e.py  test_rewrite_dsl_parsers.py  test_rewrite_graph_boundary.py  test_rewrite_output_surface.py  test_rewrite_reasoning_core.py  test_rewrite_state_lifecycle.py  test_rewrite_state_loaders.py  test_rewrite_value_types.py  test_suite_discipline.py  test_surface_inventory.py
tools/: gen_perf_fixtures.py  gen_pokec_fixtures.py  hive_preflight.py  oracle_smoke.py
(+304 files in other folders)
